# matron-server

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  book.toml  clippy.toml  flake.nix  matron-server-example.toml
.cargo/: smoketest.sh
.github/workflows/: ci.yml  main.yml  package.yml  sync-image.yml  test.yml
arch/: matron-server.service
debian/: README.md  config  matron-server.service  postinst  postrm
docker/: Dockerfile.cargo  Dockerfile.cargo.audit  Dockerfile.cargo.deb  Dockerfile.cargo.fmt  Dockerfile.cargo.lychee  Dockerfile.cargo.rpm  Dockerfile.cargo.typos  Dockerfile.complement  Dockerfile.install  Dockerfile.matrix-rust-sdk  Dockerfile.nix  Dockerfile.rocksdb  Dockerfile.smoketest  Dockerfile.source  README.md  bake.hcl
docs/: SUMMARY.md  appservices.md  configuration.md  deploying.md  development.md  introduction.md  maintenance.md  matrix_rtc.md  troubleshooting.md  turn.md
docs/calls/: matrix_rtc.md
docs/configuration/: examples.md
docs/deploying/: arch-linux.md  docker-compose.for-traefik.yml  docker-compose.override.yml  docker-compose.with-caddy.yml  docker-compose.with-traefik.yml  docker-compose.yml  docker.md  freebsd.md  generic.md  kubernetes.md  matron-server.container  nixos.md  podman-systemd.md  reverse-proxy-caddy.md  reverse-proxy-nginx.md  reverse-proxy-traefik.md  root-domain-delegation.md
docs/development/: hot_reload.md  testing.md
nix/pkgs/book/: default.nix
nix/pkgs/complement/: default.nix
nix/pkgs/main/: default.nix
nix/pkgs/oci-image/: default.nix
rpm/: README.md  matron-server.service  postinst  sysusers
src/admin/: Cargo.toml  admin.rs  context.rs  mod.rs  processor.rs  utils.rs
src/admin/appservice/: commands.rs  mod.rs
src/admin/debug/: commands.rs  mod.rs  tester.rs
src/admin/federation/: commands.rs  mod.rs
src/admin/media/: commands.rs  mod.rs
src/admin/query/: account_data.rs  appservice.rs  globals.rs  mod.rs  oauth.rs  presence.rs  pusher.rs  raw.rs  resolver.rs  room_alias.rs  room_state_cache.rs  room_timeline.rs  sending.rs  short.rs  storage.rs  sync.rs  users.rs
src/admin/room/: alias.rs  commands.rs  directory.rs  info.rs  mod.rs  moderation.rs
src/admin/server/: commands.rs  mod.rs
src/admin/token/: commands.rs  mod.rs
src/admin/user/: commands.rs  mod.rs
src/api/: Cargo.toml  mod.rs  router.rs
src/api/client/: account.rs  account_data.rs  alias.rs  appservice.rs  backup.rs  capabilities.rs  context.rs  dehydrated_device.rs  device.rs  directory.rs  events.rs  filter.rs  keys.rs  matron_server.rs  media.rs  media_legacy.rs  message.rs  mod.rs  openid.rs  presence.rs  profile.rs  push.rs  read_marker.rs  redact.rs  register.rs  relations.rs  report.rs  rtc.rs  search.rs  send.rs  space.rs  state.rs  tag.rs  thirdparty.rs  threads.rs  to_device.rs  typing.rs  unstable.rs  user_directory.rs  utils.rs  (+3 more)
src/api/client/membership/: ban.rs  forget.rs  invite.rs  join.rs  kick.rs  knock.rs  leave.rs  members.rs  mod.rs  unban.rs
src/api/client/room/: aliases.rs  create.rs  event.rs  initial_sync.rs  summary.rs  upgrade.rs
src/api/client/session/: appservice.rs  jwt.rs  ldap.rs  logout.rs  mod.rs  password.rs  refresh.rs  sso.rs  token.rs
src/api/client/session/sso/: complete.html  required0.html  required1.html  uiaa.rs
src/api/client/sync/: mod.rs  v3.rs  v5.rs
src/api/client/sync/v5/: extensions.rs  filter.rs  rooms.rs  selector.rs
src/api/client/sync/v5/extensions/: account_data.rs  e2ee.rs  receipts.rs  to_device.rs  typing.rs
src/api/router/: args.rs  auth.rs  handler.rs  request.rs  response.rs  state.rs
src/api/router/auth/: appservice.rs  server.rs  uiaa.rs
src/api/server/: backfill.rs  event.rs  event_auth.rs  get_missing_events.rs  hierarchy.rs  invite.rs  key.rs  make_join.rs  make_knock.rs  make_leave.rs  media.rs  openid.rs  publicrooms.rs  query.rs  send.rs  send_join.rs  send_knock.rs  send_leave.rs  state.rs  state_ids.rs  user.rs  utils.rs  version.rs  well_known.rs
src/core/: Cargo.toml  debug.rs  mod.rs  server.rs
src/core/config/: check.rs  mod.rs
src/core/error/: mod.rs
src/core/info/: cargo.rs  mod.rs  rustc.rs  version.rs
src/core/mods/: mod.rs
src/core/utils/: debug.rs  mod.rs  string.rs
src/database/: Cargo.toml  de.rs  deserialized.rs  engine.rs  handle.rs  keyval.rs  map.rs  maps.rs  mod.rs  pool.rs  ser.rs  stream.rs  tests.rs  util.rs
src/database/benches/: ser.rs
src/database/engine/: backup.rs  cf_opts.rs  context.rs  db_opts.rs  descriptor.rs  events.rs  files.rs  logger.rs  memory_usage.rs  open.rs  repair.rs
src/database/map/: clear.rs  compact.rs  contains.rs  count.rs  del.rs  get.rs  get_batch.rs  insert.rs  keys.rs  keys_from.rs  keys_prefix.rs  put.rs  qry.rs  qry_batch.rs  remove.rs  rev_keys.rs  rev_keys_from.rs  rev_keys_prefix.rs  rev_stream.rs  rev_stream_from.rs  rev_stream_prefix.rs  stream.rs  stream_from.rs  stream_prefix.rs  watch.rs
src/database/pool/: configure.rs
src/database/stream/: items.rs  items_rev.rs  keys.rs  keys_rev.rs
src/macros/: Cargo.toml  admin.rs  cargo.rs  rustc.rs  utils.rs
src/main/: Cargo.toml  args.rs  lib.rs  logging.rs  main.rs  mods.rs  restart.rs  runtime.rs  sentry.rs  server.rs  signals.rs
src/main/benches/: main.rs
src/main/tests/: admin_execute_echo.rs  listener_conf_err.rs  listener_conf_ok.rs  listener_init_err.rs  listener_init_ok.rs  smoke.rs  smoke_async.rs  smoke_shutdown.rs
src/router/: Cargo.toml  layers.rs  mod.rs  request.rs  router.rs  run.rs  serve.rs
src/router/serve/: plain.rs  tls.rs  unix.rs
src/service/: Cargo.toml  manager.rs  migrations.rs  mod.rs  once_services.rs  service.rs  services.rs
src/service/account_data/: direct.rs  mod.rs  room_tags.rs
src/service/admin/: console.rs  create.rs  execute.rs  grant.rs  mod.rs
src/service/appservice/: append.rs  mod.rs  namespace_regex.rs  registration_info.rs  request.rs
src/service/benches/: state_res.rs
src/service/client/: mod.rs
src/service/config/: mod.rs
src/service/deactivate/: mod.rs
tests/complement/: results.jsonl
(+139 files in other folders)
