[package]
name = "matron_server_admin"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
bench = false
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"matron-server-core/brotli_compression",
	"matron-server-service/brotli_compression",
]
bzip2_compression = [
	"matron-server-database/bzip2_compression",
	"matron-server-service/bzip2_compression",
]
gzip_compression = [
	"matron-server-core/gzip_compression",
	"matron-server-service/gzip_compression",
]
io_uring = [
	"matron-server-database/io_uring",
	"matron-server-service/io_uring",
]
jemalloc = [
	"matron-server-core/jemalloc",
	"matron-server-database/jemalloc",
	"matron-server-service/jemalloc",
]
jemalloc_conf = [
	"matron-server-core/jemalloc_conf",
	"matron-server-database/jemalloc_conf",
	"matron-server-service/jemalloc_conf",
]
jemalloc_prof = [
	"matron-server-core/jemalloc_prof",
	"matron-server-database/jemalloc_prof",
	"matron-server-service/jemalloc_prof",
]
jemalloc_stats = [
	"matron-server-core/jemalloc_stats",
	"matron-server-database/jemalloc_stats",
	"matron-server-service/jemalloc_stats",
]
lz4_compression = [
	"matron-server-database/lz4_compression",
	"matron-server-service/lz4_compression",
]
release_max_log_level = [
	"matron-server-core/release_max_log_level",
	"matron-server-database/release_max_log_level",
	"matron-server-service/release_max_log_level",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]
zstd_compression = [
	"matron-server-core/zstd_compression",
	"matron-server-database/zstd_compression",
	"matron-server-service/zstd_compression",
]

[dependencies]
base64.workspace = true
bytes.workspace = true
clap.workspace = true
matron-server-core.workspace = true
matron-server-database.workspace = true
matron-server-macros.workspace = true
matron-server-service.workspace = true
const-str.workspace = true
ctor.workspace = true
futures.workspace = true
log.workspace = true
ruma.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints]
workspace = true
