[package]
name = "matron_server_api"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
bench = false
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"matron-server-core/brotli_compression",
	"matron-server-service/brotli_compression",
	"reqwest/brotli",
]
bzip2_compression = [
	"matron-server-service/bzip2_compression",
]
element_hacks = [
	"matron-server-service/element_hacks",
]
gzip_compression = [
	"matron-server-core/gzip_compression",
	"matron-server-service/gzip_compression",
	"reqwest/gzip",
]
io_uring = [
	"matron-server-service/io_uring",
]
jemalloc = [
    "matron-server-core/jemalloc",
    "matron-server-service/jemalloc",
]
jemalloc_conf = [
	"matron-server-core/jemalloc_conf",
	"matron-server-service/jemalloc_conf",
]
jemalloc_prof = [
	"matron-server-core/jemalloc_prof",
	"matron-server-service/jemalloc_prof",
]
jemalloc_stats = [
	"matron-server-core/jemalloc_stats",
	"matron-server-service/jemalloc_stats",
]
ldap = [
	"matron-server-service/ldap",
]
lz4_compression = [
	"matron-server-service/lz4_compression",
]
release_max_log_level = [
	"matron-server-core/release_max_log_level",
	"matron-server-service/release_max_log_level",
	"log/max_level_trace",
	"log/release_max_level_info",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
]
zstd_compression = [
	"matron-server-core/zstd_compression",
	"matron-server-service/zstd_compression",
	"reqwest/zstd",
]

[dependencies]
axum-client-ip.workspace = true
axum-extra.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
const-str.workspace = true
ctor.workspace = true
futures.workspace = true
hmac.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
ruma.workspace = true
serde_html_form.workspace = true
serde_json.workspace = true
serde.workspace = true
sha1.workspace = true
tokio.workspace = true
tracing.workspace = true
matron-server-core.workspace = true
matron-server-service.workspace = true
url.workspace = true

[lints]
workspace = true
