[package]
name = "matron-server"
default-run = "matron-server"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
metadata.crane.workspace = true

[package.metadata.deb]
name = "matron-server"
maintainer = "Jason Volk <jason@zemos.net>"
copyright = "2025, Matron Contributors"
license-file = ["../../LICENSE", "3"]
depends = "$auto, ca-certificates"
extended-description = """\
High performance Matrix homeserver written in Rust"""
section = "net"
priority = "optional"
conf-files = ["/etc/matron-server/matron-server.toml"]
maintainer-scripts = "../../debian/"
systemd-units = { unit-name = "matron-server", start = false }
assets = [
	["../../debian/README.md", "usr/share/doc/matron-server/README.Debian", "644"],
	["../../README.md", "usr/share/doc/matron-server/", "644"],
	["target/release/matron-server", "usr/sbin/matron-server", "755"],
	["../../matron-server-example.toml", "etc/matron-server/matron-server.toml", "640"],
]

[package.metadata.generate-rpm]
name = "matron-server"
summary = """\
High performance Matrix homeserver written in Rust"""
require-sh = false
post_install_script = "rpm/postinst"
assets = [
	{ source = "target/release/matron-server", dest = "/usr/sbin/matron-server", mode = "755" },
	{ source = "README.md", dest = "/usr/share/doc/matron-server/", mode = "644", doc = true },
	{ source = "matron-server-example.toml", dest = "/etc/matron-server/matron-server.toml", mode = "640", config = "noreplace", user = "matron-server", group = "matron-server" },
	{ source = "rpm/matron-server.service", dest = "/etc/systemd/system/", mode = "644" },
	{ source = "rpm/sysusers", dest = "/usr/lib/sysusers.d/matron-server.conf", mode = "644" },
]

[package.metadata.arch]
name = "matron-server"
pkgdesc = "High performance Matrix homeserver written in Rust"

[features]
default = [
	"brotli_compression",
	"element_hacks",
	"gzip_compression",
	"io_uring",
	"jemalloc",
	"jemalloc_conf",
	"media_thumbnail",
	"release_max_log_level",
	"systemd",
	"url_preview",
	"zstd_compression",
]

blurhashing = [
	"matron-server-service/blurhashing",
]
brotli_compression = [
	"matron-server-admin/brotli_compression",
	"matron-server-api/brotli_compression",
	"matron-server-core/brotli_compression",
	"matron-server-router/brotli_compression",
	"matron-server-service/brotli_compression",
]
bzip2_compression = [
	"matron-server-admin/bzip2_compression",
	"matron-server-api/bzip2_compression",
	"matron-server-database/bzip2_compression",
	"matron-server-router/bzip2_compression",
	"matron-server-service/bzip2_compression",
]
console = [
	"matron-server-core/console",
	"matron-server-service/console",
]
direct_tls = [
    "matron-server-router/direct_tls"
]
element_hacks = [
	"matron-server-api/element_hacks",
	"matron-server-service/element_hacks",
]
gzip_compression = [
	"matron-server-admin/gzip_compression",
	"matron-server-api/gzip_compression",
	"matron-server-core/gzip_compression",
	"matron-server-router/gzip_compression",
	"matron-server-service/gzip_compression",
]
io_uring = [
	"matron-server-admin/io_uring",
	"matron-server-api/io_uring",
	"matron-server-database/io_uring",
	"matron-server-router/io_uring",
	"matron-server-service/io_uring",
]
jemalloc = [
	"matron-server-admin/jemalloc",
	"matron-server-api/jemalloc",
	"matron-server-core/jemalloc",
	"matron-server-database/jemalloc",
	"matron-server-router/jemalloc",
	"matron-server-service/jemalloc",
]
jemalloc_conf = [
	"matron-server-admin/jemalloc_conf",
	"matron-server-api/jemalloc_conf",
	"matron-server-core/jemalloc_conf",
	"matron-server-database/jemalloc_conf",
	"matron-server-router/jemalloc_conf",
	"matron-server-service/jemalloc_conf",
]
jemalloc_prof = [
	"matron-server-core/jemalloc_prof",
]
jemalloc_stats = [
	"matron-server-core/jemalloc_stats",
]
ldap = [
	"matron-server-api/ldap",
	"matron-server-service/ldap",
]
lz4_compression = [
	"matron-server-admin/lz4_compression",
	"matron-server-api/lz4_compression",
	"matron-server-database/lz4_compression",
	"matron-server-router/lz4_compression",
	"matron-server-service/lz4_compression",
]
media_thumbnail = [
	"matron-server-service/media_thumbnail",
]
perf_measurements = [
	"dep:opentelemetry",
	"dep:tracing-flame",
	"dep:tracing-opentelemetry",
	"dep:opentelemetry_sdk",
	#"dep:opentelemetry-jaeger",
	"matron-server-core/perf_measurements",
	"matron-server-core/sentry_telemetry",
]
# increases performance, reduces build times, and reduces binary size by not compiling or
# genreating code for log level filters that users will generally not use (debug and trace)
release_max_log_level = [
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
	"matron-server-admin/release_max_log_level",
	"matron-server-api/release_max_log_level",
	"matron-server-core/release_max_log_level",
	"matron-server-database/release_max_log_level",
	"matron-server-router/release_max_log_level",
	"matron-server-service/release_max_log_level",
]
sentry_telemetry = [
	"dep:sentry",
	"dep:sentry-tracing",
	"dep:sentry-tower",
	"matron-server-core/sentry_telemetry",
	"matron-server-router/sentry_telemetry",
]
systemd = [
	"matron-server-router/systemd",
]
# enable the tokio_console server ncompatible with release_max_log_level
tokio_console = [
	#"dep:console-subscriber",
	"tokio/tracing",
]
url_preview = [
	"matron-server-service/url_preview",
]
zstd_compression = [
	"matron-server-admin/zstd_compression",
	"matron-server-api/zstd_compression",
	"matron-server-core/zstd_compression",
	"matron-server-database/zstd_compression",
	"matron-server-router/zstd_compression",
	"matron-server-service/zstd_compression",
]
matron_server_mods = [
	"matron-server-core/matron_server_mods",
]

[dependencies]
matron-server-admin.workspace = true
matron-server-api.workspace = true
matron-server-core.workspace = true
matron-server-database.workspace = true
matron-server-macros.workspace = true
matron-server-router.workspace = true
matron-server-service.workspace = true

clap.workspace = true
#console-subscriber.optional = true
#console-subscriber.workspace = true
const-str.workspace = true
ctor.workspace = true
log.workspace = true
#opentelemetry-jaeger.optional = true
#opentelemetry-jaeger.workspace = true
opentelemetry.optional = true
opentelemetry.workspace = true
opentelemetry_sdk.optional = true
opentelemetry_sdk.workspace = true
sentry-tower.optional = true
sentry-tower.workspace = true
sentry-tracing.optional = true
sentry-tracing.workspace = true
sentry.optional = true
sentry.workspace = true
tokio-metrics.optional = true
tokio-metrics.workspace = true
tokio.workspace = true
tracing-flame.optional = true
tracing-flame.workspace = true
tracing-opentelemetry.optional = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
webpki-root-certs.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
maplit.workspace = true
similar.workspace = true

[lints]
workspace = true

[lib]
path = "lib.rs"
bench = false
crate-type = ["rlib"]

[[bin]]
name = "matron-server"
path = "main.rs"
bench = false

[[bench]]
name = "main"
harness = false
