[package]
name = "matron_server_router"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
bench = false
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"matron-server-admin/brotli_compression",
	"matron-server-api/brotli_compression",
	"matron-server-core/brotli_compression",
	"matron-server-service/brotli_compression",
	"tower-http/compression-br",
]
bzip2_compression = [
	"matron-server-admin/bzip2_compression",
	"matron-server-api/bzip2_compression",
	"matron-server-service/bzip2_compression",
]
direct_tls = [
	"axum-server/tls-rustls",
	"dep:rustls",
	"dep:axum-server-dual-protocol",
]
gzip_compression = [
	"matron-server-admin/gzip_compression",
	"matron-server-api/gzip_compression",
	"matron-server-core/gzip_compression",
	"matron-server-service/gzip_compression",
	"tower-http/compression-gzip",
]
io_uring = [
	"matron-server-admin/io_uring",
	"matron-server-api/io_uring",
	"matron-server-service/io_uring",
]
jemalloc = [
	"matron-server-admin/jemalloc",
	"matron-server-api/jemalloc",
	"matron-server-core/jemalloc",
	"matron-server-service/jemalloc",
]
jemalloc_conf = [
	"matron-server-admin/jemalloc_conf",
	"matron-server-api/jemalloc_conf",
	"matron-server-core/jemalloc_conf",
	"matron-server-service/jemalloc_conf",
]
jemalloc_prof = [
	"matron-server-admin/jemalloc_prof",
	"matron-server-api/jemalloc_prof",
	"matron-server-core/jemalloc_prof",
	"matron-server-service/jemalloc_prof",
]
jemalloc_stats = [
	"matron-server-admin/jemalloc_stats",
	"matron-server-api/jemalloc_stats",
	"matron-server-core/jemalloc_stats",
	"matron-server-service/jemalloc_stats",
]
lz4_compression = [
	"matron-server-admin/lz4_compression",
	"matron-server-api/lz4_compression",
	"matron-server-service/lz4_compression",
]
release_max_log_level = [
	"matron-server-admin/release_max_log_level",
	"matron-server-api/release_max_log_level",
	"matron-server-core/release_max_log_level",
	"matron-server-service/release_max_log_level",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]
sentry_telemetry = [
	"matron-server-core/sentry_telemetry",
	"dep:sentry",
	"dep:sentry-tracing",
	"dep:sentry-tower",
]
systemd = [
	"dep:sd-notify",
]
zstd_compression = [
	"matron-server-api/zstd_compression",
	"matron-server-core/zstd_compression",
	"matron-server-service/zstd_compression",
	"tower-http/compression-zstd",
]

[dependencies]
axum-client-ip.workspace = true
axum-server-dual-protocol.workspace = true
axum-server-dual-protocol.optional = true
axum-server.workspace = true
axum.workspace = true
bytes.workspace = true
const-str.workspace = true
ctor.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
log.workspace = true
ruma.workspace = true
rustls.workspace = true
rustls.optional = true
sentry.optional = true
sentry-tower.optional = true
sentry-tower.workspace = true
sentry-tracing.optional = true
sentry-tracing.workspace = true
sentry.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
matron-server-admin.workspace = true
matron-server-api.workspace = true
matron-server-core.workspace = true
matron-server-service.workspace = true

[target.'cfg(all(unix, target_os = "linux"))'.dependencies]
sd-notify.workspace = true
sd-notify.optional = true

[lints]
workspace = true
